Add configuration, added logging, added proper unit tests with separation of concerns

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,7 +1,14 @@
 
 io.yummy.text {
 
-  header-name = "file"
-  file-size = 10000000
+  server {
+    host = "0.0.0.0"
+    port = 8080
+  }
+
+  digester {
+    header-name = "file"
+    file-max-size = 10000000
+  }
 
 }
